1.8-3 (NOT YET SUBMITTED TO CRAN)
  * Corrected call to print.xtable inside print.xtableFtable included
    arguments from call to print.xtableFtable. Absence of size
    argument was advised by Lluis Ramon, email March 4, 2016    
  * Added patch from Martin Gubri, martin.gubri@framasoft.org to
    enable use of lagImpactMat from spdep in xtable method lagImpact.
  * Added patch to code in OtherPackagesGallery.Rnw supplied by Martin
    Gubri to avoid warnings in the spdep package example. Also fixed the
    vignette index entry.
  
1.8-2 (2016-02-05)
  * Added function print.xtableMatharray to enable easy creation of
    LaTeX code to enable an array to be included in a document.
  * Added example to the gallery using sanitizing headings and row
    names to produce large bold headings and italic row names.
  * Added code from Martin Gubri, martin.gubri@framasoft.org, to produce
    tables from the spatial econometrics packages, spdep, splm, and
    sphet.
  * Extracted sanitize functions from print.xtable as stand-alone
    functions, and exported them. Added helper functions as.is and
    as.math for assistance with sanitization (supplied by Stefan
    Edwards <sme@iysik.com> in Feature Request #5303).
  * Added option to produce math style exponents when sanitizing
    numbers, as suggested by Don Armstrong <don@donarmstrong.com>, who
    also provided code
  * Fixed bug #6907. Warning was created when the data frame as no
    rows for type is 'html'. Added a test to create the matrix
    requested specially in that case. Original code was
    BTD2 <- matrix(align.tmp[(2-pos):(ncol(x)+1)],
                   nrow = nrow(x), ncol = ncol(x)+pos, byrow = TRUE)
    which created a matrix with no rows, but gave a warning when
    there were no rows in the data frame being processed.
  * Fixed bug #6260. Accepted the change suggested by Claudius
    Loehnert, which was to replace { and } by \begingroup and