@@ -1,8 +1,37 @@
 Package: xtable
 Version: 1.8-3
-Date: 2016-03-30
+Date: 2016-06-08
 Title: Export Tables to LaTeX or HTML
-Author: David B. Dahl <dahl@stat.byu.edu>
+Authors@R: c(person("David B.", "Dahl", role="aut"),
+             person("David", "Scott", role=c("aut","cre"),
+               email="d.scott@auckland.ac.nz"),
+             person("Charles", "Roosen", role="aut"),
+             person("Arni", "Magnusson", role="aut"),
+             person("Jonathan", "Swinton", role="aut"),
+             person("Ajay", "Shah", role="ctb"),
+             person("Arne", "Henningsen", role="ctb"),
+             person("Benno", "Puetz", role="ctb"),
+             person("Bernhard", "Pfaff", role="ctb"),
+             person("Claudio", "Agostinelli", role="ctb"),
+             person("Claudius", "Loehnert", role="ctb"),
+             person("David", "Mitchell", role="ctb"),
+             person("David", "Whiting", role="ctb"),
+             person("Fernando da", "Rosa", role="ctb"),
+             person("Guido", "Gay", role="ctb"),
+             person("Guido", "Schulz", role="ctb"),
+             person("Ian", "Fellows", role="ctb"),
+             person("Jeff", "Laake", role="ctb"),
+             person("John", "Walker", role="ctb"),
+             person("Jun", "Yan", role="ctb"),
+             person("Liviu", "Andronic", role="ctb"),
+             person("Markus", "Loecher", role="ctb"),
+             person("Martin", "Gubri", role="ctb"),
+             person("Matthieu", "Stigler", role="ctb"),
+             person("Robert", "Castelo", role="ctb"),
+             person("Seth", "Falcon", role="ctb"),
+             person("Stefan", "Edwards", role="ctb"),
+             person("Sven", "Garbade", role="ctb"),
+             person("Uwe", "Ligges", role="ctb"))
 Maintainer: David Scott <d.scott@auckland.ac.nz>
 Imports: stats, utils
 Suggests: knitr, lsmeans, spdep, splm, sphet, plm, zoo, survival
